--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 packages = [{include = "youtube_audio_upload"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.12"
 tqdm = "^4.65.0"
 yt-dlp = "^2023.3.4"
+rumps = "^0.4.0"
 
 
 [build-system]
