--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-downloaded/*
-.DS_Store
-.gitignore
-archive.txt
+__pycache__
+.venv
 poetry.lock
-__pycache__/youtube_download.cpython-311.pyc
-setting.json
+.gitignore
+
+yt2audio/downloaded/*
+yt2audio/__pycache__/
+yt2audio/archive.txt
+yt2audio/setting.json
+
+.DS_Store
+
+
