--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = ">=3.11,<3.12"
 tqdm = "^4.65.0"
 yt-dlp = "^2023.3.4"
 rumps = "^0.4.0"
+pydub = "^0.25.1"
+mutagen = "^1.46.0"
 
 
 [build-system]
